--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,31 +1,25 @@
+# uwsgi_meals.ini file
 [uwsgi]
-# this config will be loaded if nothing specific is specified
-# load base config from below
-ini = :base
 
-# %d is the dir this configuration file is in
-socket = %dapp.sock
-master = true
-processes = 4
+# process-related settings
+master          = true
 
-[dev]
-ini = :base
-# socket (uwsgi) is not the same as http, nor http-socket
-socket = :8001
+vhost = true
 
+# maximum number of worker processes
+processes       = 4
 
-[local]
-ini = :base
-http = :8000
-# set the virtual env to use
-home=/Users/you/envs/env
+# the socket (use the full path to be safe
+socket          = 127.0.0.1:8001   # /home/docker/code/app/uwsgi.sock
+pidfile         = /home/docker/code/app/uwsgi.pid
+#daemonize      = /home/docker/code/app/logs/uwsgi.log
+stdout_logfile  = /home/docker/code/app/logs/uwsgi.log
+# ... with appropriate permissions - may be needed
+chmod-socket    = 664
+# clear environment on exit
+vacuum          = true  
+daemon          = false 
+module = django.core.wsgi:get_wsgi_application()
 
-
-[base]
-# chdir to the folder of this config file, plus app/website
-chdir = %dapp/
-# load the module from wsgi.py, it is a python path from 
-# the directory above.
-module=website.wsgi:application
-# allow anyone to connect to the socket. This is very permissive
-chmod-socket=666
+#plugin = python
+#py-autoreload = 5
