--- a/supervisor-app.conf
+++ b/supervisor-app.conf
@@ -1,5 +1,6 @@
-[program:app-uwsgi]
-command = /usr/local/bin/uwsgi --ini /home/docker/code/uwsgi.ini
-
-[program:nginx-app]
-command = /usr/sbin/nginx
+[program:app-meinheld]
+command = gunicorn -w 5 -b :8001 --env DJANGO_SETTINGS_MODULE=$APP.settings --worker-class="egg:meinheld#gunicorn_worker" $APP.wsgi:application --reload
+directory = /home/docker/code/app
+stdout_logfile=supervisor.log
+autorestart=true
+redirect_stderr=true
